Update PermissionService.java